--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@
 .p-font{
     font-family: 'Manrope', sans-serif;
 }
+.text-center{
+    text-align: center;
+}
 .col{
     width: 47%;
 }
@@ -176,4 +179,53 @@
     font-size: 16px !important;
     font-weight: 400;
     padding-top: 15px;
+}
+
+        /* Blogs Section */
+.blogs-section{
+    padding: 70px 0;
+}
+.blogs-section h1{
+    color: #676767;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    padding: 40px 0 30px 0; 
+}
+.blogs-section img{
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    border-radius: 10px;
+}
+.blogs-section .container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.blogs-section h3{
+    padding: 15px 0;
+    font-weight: bold;
+    color: #18191F;
+}
+.blogs-section p{
+    font-size: 16px !important;
+    color: #676767;
+    padding-bottom: 30px;
+    margin: 0 !important;
+    font-weight: normal;
+}
+.blogs-section p a{
+    color: rgba(251, 162, 79, 1);
+    font-weight: bolder;
+
+}
+.blogs-section .col{
+    padding: 20px;
+    margin: 0;
+    width: 25%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    border-radius: 15px;
 }
