--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
     background: linear-gradient(to right, rgba(251, 162, 79, 1), rgba(255, 30, 30, 1));
     border: none;
     border-radius: 100px;
-    padding: 25px 50px;
+    padding: 20px 40px;
     font-size: 18px;
     font-weight: 600;
     box-shadow: 0 2px 30px #FC8F49;
@@ -50,7 +50,9 @@
     max-height: auto;
     padding: 50px 50px;
 }
-
+p{
+    line-height: 30px;
+}
 
         /* Top section  */
 
@@ -69,6 +71,9 @@
     display: block;
     margin: 0 auto;
     padding: 0;
+}
+.top-section{
+    padding-top: 10px;
 }
 
         /* About Me section */
@@ -121,6 +126,7 @@
     font-weight: 400;
     text-align: center;
     padding: 0 250px;
+    line-height: 136%;
 }
 .card-img{
     width: 100%;
@@ -139,8 +145,8 @@
 }
 .card h2{
     font-size: 28px;
-    font-weight: 900;
-    padding-top: 40px;
+    font-weight: bold;
+    padding-top: 35px;
 }
 .card p{
     color: #18191F;
@@ -184,7 +190,7 @@
         /* Blogs Section */
 .blogs-section{
     margin: 70px 0;
-    background: url(images/shapes/Frame\ 58.jpg) no-repeat;
+    background: url(images/shapes/Frame\ 59.jpg) no-repeat;
     background-size: cover;
 }
 .blogs-section h1{
@@ -222,7 +228,7 @@
 .blogs-section p a{
     color: rgba(251, 162, 79, 1);
     font-weight: bolder;
-
+    text-decoration: none;;
 }
 .blogs-section .col{
     padding: 20px;
@@ -230,4 +236,83 @@
     width: 25%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     border-radius: 15px;
+}
+
+        /* Form Section */
+
+.form-section{
+    height: 600px;
+    padding: 10px 0 45px 0 !important;
+}
+.form-section h1{
+    font-size: 36px;
+    font-weight: bold;
+}
+form{
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+    text-align: center;
+    padding: 40px 0 0 0;
+}
+input:not(:last-child), textarea{
+    border-radius: 7px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 17px;
+    margin: 10px 0;
+    outline: none;
+    border: 2px solid #575757;
+    padding: 10px;
+    color: #575757;
+}
+
+#firstName{
+    height: 35px;
+    width: 25%;
+}
+#lastName{
+    height: 35px;
+    width: 25%;
+}
+#email{
+    width: 52.5%;
+    height: 35px;
+}
+#textArea{
+    width: 52.5%;
+    height: auto;
+    display: block;
+    margin: 10px auto;
+    padding: 10px;
+}
+#submit{
+    display: block;
+    text-align: right;
+    margin: 10px auto;
+    padding: 15px 40px;
+}
+
+
+
+            /* Footer Section */
+
+footer{
+    background: black;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+footer h1{
+    color: #5b5b5b;
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 40px;
+}
+footer p{
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+    padding-top: 40px;
 }
