--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ p{
     overflow: hidden;
     padding-bottom: 0;
 }
+
 .about-me .col:first{
     width: 40%;
 }
@@ -185,6 +186,37 @@ p{
     font-size: 16px !important;
     font-weight: 400;
     padding-top: 15px;
+}
+
+            /* Food Gallery Section */
+.food-gallery{
+    height: auto;
+    width: 100%;
+    padding: 90px 0 40px 0;
+}
+.food-gallery h1{
+    color: #676767;
+    font-size: 36px;
+    font-weight: bold;
+    padding-bottom: 40px;
+}
+.food-gallery img{
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+.food-gallery .container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;   
+    width: 80%;
+    margin: 0 auto; 
+    padding: 13px 0;
+}
+.food-gallery .container .col{
+    width: 30%;
 }
 
         /* Blogs Section */
