--- a/style.css
+++ b/style.css
@@ -192,31 +192,35 @@ p{
 .food-gallery{
     height: auto;
     width: 100%;
-    padding: 90px 0 40px 0;
+    justify-content: space-around;
+    padding: 100px 0 40px 0;
 }
 .food-gallery h1{
     color: #676767;
     font-size: 36px;
     font-weight: bold;
-    padding-bottom: 40px;
+    padding-bottom: 35px;
 }
+
 .food-gallery img{
     width: 100%;
     height: auto;
-    display: block;
-    margin: 0 auto;
+    border-radius: 20px;
 }
+
 .food-gallery .container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;   
-    width: 80%;
-    margin: 0 auto; 
-    padding: 13px 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
-.food-gallery .container .col{
-    width: 30%;
+.food-gallery .col{
+    width: 25%;
+    padding: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    border-radius: 25px;
+    transition: box-shadow 0.4s ease;
+}
+.food-gallery .col:hover{
+    box-shadow: 0 0 60px rgba(0, 0, 0, 0.15);
 }
 
         /* Blogs Section */
