--- a/style.css
+++ b/style.css
@@ -109,7 +109,9 @@ p{
 .about-me .p-font{
     color: rgba(24, 25, 31, 1);
     font-size: 18px !important;
+    margin: 20px 0 50px 0 !important;
 }
+
 
 
         /* My Recipe section */
